@@ -25,35 +25,31 @@ public class FeedRepository {
                         POSTS.CONTENT,
                         POSTS.CREATED_AT,
                         USERS.ID.as("authorId"),
-                        // Fallback to username if profile name doesn't exist
                         DSL.coalesce(USER_PROFILES.FULL_NAME, USERS.USERNAME).as("authorName"),
                         CLUBS.ID.as("clubId"),
                         CLUBS.NAME.as("clubName"),
 
-                        // Subquery for total likes
-                        DSL.field(
-                                DSL.selectCount().from(LIKES).where(LIKES.POST_ID.eq(POSTS.ID))
-                        ).as("likeCount"),
+                        // Get total likes
+                        DSL.field(DSL.selectCount().from(LIKES).where(LIKES.POST_ID.eq(POSTS.ID))).as("likeCount"),
+                        // Get total comments
+                        DSL.field(DSL.selectCount().from(COMMENTS).where(COMMENTS.POST_ID.eq(POSTS.ID))).as("commentCount"),
+                        // Check if I liked it
+                        DSL.field(DSL.exists(
+                                DSL.selectOne().from(LIKES).where(LIKES.POST_ID.eq(POSTS.ID).and(LIKES.USER_ID.eq(currentUserId)))
+                        )).as("isLikedByMe"),
 
-                        // Subquery for total comments
+                        // Fetch the media URLs as a PostgreSQL Array!
                         DSL.field(
-                                DSL.selectCount().from(COMMENTS).where(COMMENTS.POST_ID.eq(POSTS.ID))
-                        ).as("commentCount"),
-
-                        // FIX: Use DSL.exists() instead of casting count() to Boolean for PostgreSQL
-                        DSL.field(
-                                DSL.exists(
-                                        DSL.selectOne().from(LIKES)
-                                                .where(LIKES.POST_ID.eq(POSTS.ID)
-                                                        .and(LIKES.USER_ID.eq(currentUserId)))
-                                )
-                        ).as("isLikedByMe")
+                                DSL.select(DSL.arrayAgg(MEDIA.URL))
+                                        .from(POST_MEDIA)
+                                        .join(MEDIA).on(POST_MEDIA.MEDIA_ID.eq(MEDIA.ID))
+                                        .where(POST_MEDIA.POST_ID.eq(POSTS.ID))
+                        ).as("mediaUrls")
                 )
                 .from(POSTS)
                 .leftJoin(USERS).on(POSTS.AUTHOR_ID.eq(USERS.ID))
                 .leftJoin(USER_PROFILES).on(USERS.ID.eq(USER_PROFILES.USER_ID))
                 .leftJoin(CLUBS).on(POSTS.CLUB_ID.eq(CLUBS.ID))
-                // For the MVP, a Global Feed ordered by newest creates the best demo experience
                 .where(POSTS.IS_PUBLIC.eq(true));
 
         if (cursor != null) {
@@ -62,19 +58,25 @@ public class FeedRepository {
 
         return query.orderBy(POSTS.ID.desc())
                 .limit(limit)
-                .fetch(record -> new FeedPostDto(
-                        record.get(POSTS.ID),
-                        record.get(POSTS.CONTENT),
-                        record.get(POSTS.CREATED_AT),
-                        record.get("authorId", Long.class),
-                        record.get("authorName", String.class),
-                        record.get("clubId", Long.class),
-                        record.get("clubName", String.class),
-                        record.get("likeCount", Integer.class),
-                        record.get("commentCount", Integer.class),
-                        record.get("isLikedByMe", Boolean.class),
-                        List.of() // Empty list for media placeholder
-                ));
+                .fetch(record -> {
+                    // Safely extract the PostgreSQL Array and convert it to a Java List
+                    String[] mediaArray = record.get("mediaUrls", String[].class);
+                    List<String> mediaList = mediaArray != null ? java.util.Arrays.asList(mediaArray) : java.util.List.of();
+
+                    return new FeedPostDto(
+                            record.get(POSTS.ID),
+                            record.get(POSTS.CONTENT),
+                            record.get(POSTS.CREATED_AT),
+                            record.get("authorId", Long.class),
+                            record.get("authorName", String.class),
+                            record.get("clubId", Long.class),
+                            record.get("clubName", String.class),
+                            record.get("likeCount", Integer.class),
+                            record.get("commentCount", Integer.class),
+                            record.get("isLikedByMe", Boolean.class),
+                            mediaList // Pass it into the DTO!
+                    );
+                });
     }
 
     // NEW METHOD: Fetch posts for a specific club
@@ -89,6 +91,12 @@ public class FeedRepository {
                         CLUBS.NAME.as("clubName"),
                         DSL.field(DSL.selectCount().from(LIKES).where(LIKES.POST_ID.eq(POSTS.ID))).as("likeCount"),
                         DSL.field(DSL.selectCount().from(COMMENTS).where(COMMENTS.POST_ID.eq(POSTS.ID))).as("commentCount"),
+                        DSL.field(
+                                DSL.select(DSL.arrayAgg(MEDIA.URL))
+                                        .from(POST_MEDIA)
+                                        .join(MEDIA).on(POST_MEDIA.MEDIA_ID.eq(MEDIA.ID))
+                                        .where(POST_MEDIA.POST_ID.eq(POSTS.ID))
+                        ).as("mediaUrls"),
                         DSL.field(DSL.exists(
                                 DSL.selectOne().from(LIKES)
                                         .where(LIKES.POST_ID.eq(POSTS.ID)
@@ -112,7 +120,58 @@ public class FeedRepository {
                         record.get("authorId", Long.class), record.get("authorName", String.class),
                         record.get("clubId", Long.class), record.get("clubName", String.class),
                         record.get("likeCount", Integer.class), record.get("commentCount", Integer.class),
-                        record.get("isLikedByMe", Boolean.class), List.of()
+                        record.get("isLikedByMe", Boolean.class),
+                        record.get("mediaUrls", String[].class) != null
+                        ? java.util.Arrays.asList(record.get("mediaUrls", String[].class))
+                        : java.util.List.of()
+                ));
+    }
+
+    // NEW METHOD: Fetch posts for a specific user
+    public List<FeedPostDto> getUserFeed(Long authorId, Long currentUserId, Long cursor, int limit) {
+        var query = dsl.select(
+                        POSTS.ID,
+                        POSTS.CONTENT,
+                        POSTS.CREATED_AT,
+                        USERS.ID.as("authorId"),
+                        DSL.coalesce(USER_PROFILES.FULL_NAME, USERS.USERNAME).as("authorName"),
+                        CLUBS.ID.as("clubId"),
+                        CLUBS.NAME.as("clubName"),
+                        DSL.field(DSL.selectCount().from(LIKES).where(LIKES.POST_ID.eq(POSTS.ID))).as("likeCount"),
+                        DSL.field(DSL.selectCount().from(COMMENTS).where(COMMENTS.POST_ID.eq(POSTS.ID))).as("commentCount"),
+                        DSL.field(
+                                DSL.select(DSL.arrayAgg(MEDIA.URL))
+                                        .from(POST_MEDIA)
+                                        .join(MEDIA).on(POST_MEDIA.MEDIA_ID.eq(MEDIA.ID))
+                                        .where(POST_MEDIA.POST_ID.eq(POSTS.ID))
+                        ).as("mediaUrls"),
+                        DSL.field(DSL.exists(
+                                DSL.selectOne().from(LIKES)
+                                        .where(LIKES.POST_ID.eq(POSTS.ID)
+                                                .and(LIKES.USER_ID.eq(currentUserId)))
+                        )).as("isLikedByMe")
+                )
+                .from(POSTS)
+                .leftJoin(USERS).on(POSTS.AUTHOR_ID.eq(USERS.ID))
+                .leftJoin(USER_PROFILES).on(USERS.ID.eq(USER_PROFILES.USER_ID))
+                .leftJoin(CLUBS).on(POSTS.CLUB_ID.eq(CLUBS.ID))
+                .where(POSTS.AUTHOR_ID.eq(authorId));
+
+        if (cursor != null) {
+            query.and(POSTS.ID.lessThan(cursor));
+        }
+
+        return query.orderBy(POSTS.ID.desc())
+                .limit(limit)
+                .fetch(record -> new FeedPostDto(
+                        record.get(POSTS.ID), record.get(POSTS.CONTENT), record.get(POSTS.CREATED_AT),
+                        record.get("authorId", Long.class), record.get("authorName", String.class),
+                        record.get("clubId", Long.class), record.get("clubName", String.class),
+                        record.get("likeCount", Integer.class), record.get("commentCount", Integer.class),
+                        record.get("isLikedByMe", Boolean.class),
+                        record.get("mediaUrls", String[].class) != null
+                                ? java.util.Arrays.asList(record.get("mediaUrls", String[].class))
+                                : java.util.List.of()
                 ));
     }
 
@@ -173,5 +232,37 @@ public class FeedRepository {
                 .leftJoin(USER_PROFILES).on(USERS.ID.eq(USER_PROFILES.USER_ID))
                 .where(COMMENTS.ID.eq(commentId))
                 .fetchOneInto(ge.dola.talanti.feed.dto.CommentDto.class);
+    }
+
+
+    @org.springframework.transaction.annotation.Transactional
+    public void createPost(Long authorId, ge.dola.talanti.feed.dto.CreatePostRequest request) {
+        // 1. Create the Post
+        Long postId = dsl.insertInto(POSTS)
+                .set(POSTS.AUTHOR_ID, authorId)
+                .set(POSTS.CLUB_ID, request.clubId())
+                .set(POSTS.CONTENT, request.content())
+                .set(POSTS.IS_PUBLIC, true)
+                .set(POSTS.CREATED_AT, java.time.LocalDateTime.now())
+                .returningResult(POSTS.ID)
+                .fetchOneInto(Long.class);
+
+        // 2. Link the Uploaded Media
+        if (request.mediaIds() != null && !request.mediaIds().isEmpty()) {
+            var mediaInsert = dsl.insertInto(POST_MEDIA, POST_MEDIA.POST_ID, POST_MEDIA.MEDIA_ID, POST_MEDIA.DISPLAY_ORDER);
+            for (int i = 0; i < request.mediaIds().size(); i++) {
+                mediaInsert = mediaInsert.values(postId, request.mediaIds().get(i), i);
+            }
+            mediaInsert.execute();
+        }
+
+        // 3. Link the Tagged Players (For their Match Feed)
+        if (request.taggedUserIds() != null && !request.taggedUserIds().isEmpty()) {
+            var tagsInsert = dsl.insertInto(POST_TAGS, POST_TAGS.POST_ID, POST_TAGS.USER_ID);
+            for (Long taggedUserId : request.taggedUserIds()) {
+                tagsInsert = tagsInsert.values(postId, taggedUserId);
+            }
+            tagsInsert.execute();
+        }
     }
 }
